[package]
name = "back_end"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Hyll <alexander.hyll@gmail.com"]

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.2"
actix-web-lab = "0.18.2"
serde = { version = "1.0.144", features = ["derive"] }
serde_postgres = "0.2.0"
serde_derive = "1.0.144"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
juniper = {version = "0.15.10", features = ["uuid", "chrono"]}
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
deadpool-postgres = "0.10.2"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4", "with-uuid-1"] }
postgres-types = "0.2.4"
google-cloud-pubsub = "0.5.2"
google-cloud-gax = "0.8.2"
google-cloud-googleapis = "0.5.1"
tokio = "1.21.1"
serde_json = "1.0.85"
actix-multipart = "0.4.0"