[package]
name = "back_end"
version = "0.1.13"
edition = "2021"
authors = ["Alexander Hyll <alexander.hyll@gmail.com"]

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
actix-web-lab = "0.18.5"
actix-files = "0.6.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_postgres = "0.2.0"
serde_derive = "1.0.147"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
juniper = { version = "0.15.10", features = ["uuid", "chrono"] }
chrono = { version = "0.4.23", features = ["serde"] }
deadpool-postgres = "0.10.3"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4", "with-uuid-1"] }
tokio = { version = "1.22.0", features = ["full"] }
serde_json = "1.0.88"
actix-multipart = "0.4.0"
futures = "0.3.25"
options = { git = "https://github.com/adaptive-alexander/options.git" }
rayon = "1.5.3"
env_logger = "0.10.0"
